<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/text_view_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/task_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/task_name" />

    <TextView
        android:id="@+id/text_view_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/text_view_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/priority_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <!-- LinearLayout horizontal para los botones "Due Date" y "Due Time" -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <!-- LinearLayout para Due Date -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/text_view_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textSize="18sp" />
            <Button
                android:textColor="@color/black"
                android:backgroundTint="@color/lightBlue"
                android:id="@+id/button_select_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date" />
            <!-- TextViews debajo de los botones -->
            <TextView
                android:id="@+id/selected_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <!-- LinearLayout para Due Time -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/text_view_due_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_time"
                android:textSize="18sp" />
            <Button
                android:textColor="@color/black"
                android:backgroundTint="@color/lightBlue"
                android:id="@+id/button_select_due_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time" />

            <TextView
                android:id="@+id/selected_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/notes_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_notes" />

    <Button
        android:textColor="@color/black"
        android:backgroundTint="@color/lightBlue"
        android:id="@+id/button_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:layout_marginTop="16dp" />

</LinearLayout>
